--- a/GoGoGithub/Base.lproj/Main.storyboard
+++ b/GoGoGithub/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="H4m-Gn-YjL">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
@@ -8,7 +8,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GoGoGithub" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="GoGoGithub" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -17,8 +17,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="githubLogo" translatesAutoresizingMaskIntoConstraints="NO" id="J1s-Pg-Yo9">
-                                <rect key="frame" x="189" y="123" width="200" height="188"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="githubLogo" translatesAutoresizingMaskIntoConstraints="NO" id="J1s-Pg-Yo9">
+                                <rect key="frame" x="189" y="123" width="200" height="270"/>
                                 <animations/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="4GR-6a-OeP"/>
@@ -32,11 +32,11 @@
                                     </mask>
                                 </variation>
                             </imageView>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zf0-wd-VhL">
-                                <rect key="frame" x="169" y="319" width="240" height="238"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zf0-wd-VhL">
+                                <rect key="frame" x="169" y="419" width="240" height="302"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleAspectFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j6D-hR-0bO">
-                                        <rect key="frame" x="0.0" y="26" width="240" height="40"/>
+                                    <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j6D-hR-0bO">
+                                        <rect key="frame" x="0.0" y="0.0" width="240" height="40"/>
                                         <animations/>
                                         <color key="backgroundColor" red="0.2488422860627304" green="0.66327806879141504" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
@@ -50,8 +50,8 @@
                                             <action selector="authenticButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JQz-Zw-0eF"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleAspectFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kcn-DQ-Lxx">
-                                        <rect key="frame" x="0.0" y="112" width="240" height="40"/>
+                                    <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kcn-DQ-Lxx">
+                                        <rect key="frame" x="0.0" y="71" width="240" height="40"/>
                                         <animations/>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
@@ -69,28 +69,50 @@
                                 <animations/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="j6D-hR-0bO" firstAttribute="centerY" secondItem="zf0-wd-VhL" secondAttribute="centerY" constant="-73" id="E2h-cT-9ah"/>
+                                    <constraint firstItem="j6D-hR-0bO" firstAttribute="centerY" secondItem="zf0-wd-VhL" secondAttribute="centerY" constant="-131" id="E2h-cT-9ah"/>
                                     <constraint firstItem="Kcn-DQ-Lxx" firstAttribute="centerX" secondItem="zf0-wd-VhL" secondAttribute="centerX" id="JsQ-3k-IwG"/>
                                     <constraint firstItem="j6D-hR-0bO" firstAttribute="centerX" secondItem="zf0-wd-VhL" secondAttribute="centerX" id="NJY-5g-E8a"/>
                                     <constraint firstAttribute="width" constant="240" id="dlF-ew-wZb"/>
-                                    <constraint firstItem="Kcn-DQ-Lxx" firstAttribute="centerY" secondItem="zf0-wd-VhL" secondAttribute="centerY" constant="13" id="lUf-bP-jdk"/>
+                                    <constraint firstItem="Kcn-DQ-Lxx" firstAttribute="centerY" secondItem="zf0-wd-VhL" secondAttribute="centerY" constant="-60" id="lUf-bP-jdk"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="zf0-wd-VhL" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="138" id="4yN-6g-avq"/>
+                            <constraint firstItem="zf0-wd-VhL" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="270" id="4yN-6g-avq"/>
                             <constraint firstItem="J1s-Pg-Yo9" firstAttribute="centerX" secondItem="zf0-wd-VhL" secondAttribute="centerX" id="KVS-Ft-oIm"/>
                             <constraint firstItem="J1s-Pg-Yo9" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="103" id="Lr5-ed-vVZ"/>
-                            <constraint firstItem="zf0-wd-VhL" firstAttribute="top" secondItem="J1s-Pg-Yo9" secondAttribute="bottom" constant="8" id="SpB-AP-LzW"/>
+                            <constraint firstItem="zf0-wd-VhL" firstAttribute="top" secondItem="J1s-Pg-Yo9" secondAttribute="bottom" constant="26" id="SpB-AP-LzW"/>
                             <constraint firstItem="zf0-wd-VhL" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="-11" id="Y9n-Ul-bPU"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="loginButton" destination="j6D-hR-0bO" id="pqh-Tf-Kbs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="308" y="263"/>
+        </scene>
+        <!--Repository View Controller-->
+        <scene sceneID="2wP-Iz-FWM">
+            <objects>
+                <viewController id="H4m-Gn-YjL" customClass="RepositoryViewController" customModule="GoGoGithub" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="XAY-C5-XQk"/>
+                        <viewControllerLayoutGuide type="bottom" id="Ryq-BW-CXf"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="tEs-Dj-R4s">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oe8-cT-mx4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="978" y="263"/>
         </scene>
     </scenes>
     <resources>
