--- a/GoGoGithub/Base.lproj/Main.storyboard
+++ b/GoGoGithub/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="H4m-Gn-YjL">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="VxH-Q1-oJW">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
@@ -95,7 +95,7 @@
             </objects>
             <point key="canvasLocation" x="308" y="263"/>
         </scene>
-        <!--Repository View Controller-->
+        <!--Repositories-->
         <scene sceneID="2wP-Iz-FWM">
             <objects>
                 <viewController id="H4m-Gn-YjL" customClass="RepositoryViewController" customModule="GoGoGithub" customModuleProvider="target" sceneMemberID="viewController">
@@ -113,7 +113,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="customCell" id="huM-ke-Q6o">
-                                        <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                        <rect key="frame" x="0.0" y="92" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="huM-ke-Q6o" id="LBb-c3-W3e">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
@@ -128,11 +128,37 @@
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Repositories" id="h1I-n7-NpC">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="6f7-B5-u4i">
+                            <connections>
+                                <action selector="postRepository:" destination="H4m-Gn-YjL" id="6Eu-tp-0vj"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="Tak-uJ-rGz" id="1r5-Ot-drt"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oe8-cT-mx4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1790" y="263"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="7wq-CV-4Ej">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="VxH-Q1-oJW" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="G1l-PZ-TZy">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="H4m-Gn-YjL" kind="relationship" relationship="rootViewController" id="aSj-b1-X9Z"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8WR-5q-15b" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="978" y="263"/>
         </scene>
